--- a/index.html
+++ b/index.html
@@ -3,25 +3,41 @@
     <head> 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
         <title>MobileOne</title> 
+		
+		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.min.css" />
+		
+		<link rel="stylesheet" type="text/css" href="stylesheets/typography.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/application.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/login.css" />
     </head>
     <body>
-		<script type="template/underscore" id="loginTemplate">
-			<% console.log("view", collector.get("collectorNumber")) %>
-			Blah blah blah <%= collector.get("collectorNumber") %>
+		<script type="template/underscore" id="menuTemplate">
+			TODO
 		</script>
 
 
-		<article>
+		<script type="template/underscore" id="loginTemplate">
+			<input type="text" class="input-xlarge" placeholder="Collector Number"></input>
+		</script>
+
+		<article id="application" page="login">
+			<nav id="navigation">
+				<button type="button" class="btn" onclick="app.menu('toggle')">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<h1>Navigation Bar</h1>
+			</nav>
+			<aside id="menu"></aside>
 			<section>
-				<h1>Hello MobileOne</h1>
-				<p>Salutations rawr</p>
-				
+				<article id="login"></article>
 			</section>
-			
-			<section id="login">login</section>
 		</article>
 		
 		<script src="javascripts/lib/jquery-2.0.3.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="javascripts/lib/underscore-1.5.1.min.js"></script>
 		<script src="javascripts/lib/backbone-1.0.0.min.js"></script>
 		
