fixed login page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				</header>
 				<section class="form">
 					<input type="text" class="form-control" placeholder="Collector Number"></input>
+					<button class="btn login">Login</button>
 				</section>
 			</article>
 		</script>
