--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<img src="images/icon.png" />
 				</header>
 				<section class="form">
-					<input type="text" class="form-control" placeholder="Collector Number"></input>
+					<input type="text" class="form-control collectorNumber" placeholder="Collector Number"></input>
 					<button class="btn login">Login</button>
 				</section>
 			</article>
