--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<link rel="stylesheet" type="text/css" href="stylesheets/navigation.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/login.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/home.css" />
+		
+		<!-- framework -->
+        <script src="local:///chrome/webworks.js" type="text/javascript"></script>
     </head>
     <body>
 		<script type="template/underscore" id="navigationTemplate">
