--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		<script src="javascripts/lib/backbone-1.0.0.min.js"></script>
 		
 		<!-- Models -->
+		<script src="javascripts/models/message.model.js"></script>
 		<script src="javascripts/models/collector.model.js"></script>
 		<script src="javascripts/models/reward.model.js"></script>
 		
