--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 		
 		<!-- Models -->
 		<script src="javascripts/models/collector.model.js"></script>
+		<script src="javascripts/models/reward.model.js"></script>
 		
 		<!-- Presenters (Views controlers) -->
 		<script src="javascripts/presenters/navigation.presenter.js"></script>
