getting config values and setting globally.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 		<!-- Models -->
 		<script src="javascripts/models/message.model.js"></script>
 		<script src="javascripts/models/collector.model.js"></script>
+        <script src="javascripts/models/config.model.js"></script>
 		<script src="javascripts/models/reward.model.js"></script>
 		
 		<!-- Presenters (Views controlers) -->
